Fix typos of Deibold to Diebold

--- a/tutorials/confidence_intervals_using_statistical_tests.ipynb
+++ b/tutorials/confidence_intervals_using_statistical_tests.ipynb
@@ -25,7 +25,7 @@
     "- the Hering and Genton (2011) modification.\n",
     "\n",
     "Both methods use a different technique for estimating the spectral density of\n",
-    "the timeseries of differences at frequency 0, compared with Deibold and Mariano (1995). \n",
+    "the timeseries of differences at frequency 0, compared with Diebold and Mariano (1995). \n",
     "The HLN method uses an improved and less biased estimate (see V_hat (see Equation (5) in \n",
     "Harvey et al., 1997)). However, this estimate can sometimes be nonpositive, in which \n",
     "case NaN is returned.\n",
@@ -588,7 +588,7 @@
    "source": [
     "In the output above you'll see\n",
     " - \"mean\": the mean value for each timeseries, ignoring NaNs\n",
-    "- \"dm_test_stat\": the modified Deibold-Mariano test statistic for each\n",
+    "- \"dm_test_stat\": the modified Dibold-Mariano test statistic for each\n",
     "    timeseries\n",
     "- \"timeseries_len\": the length of each timeseries, with NaNs removed.\n",
     "- \"confidence_gt_0\": the confidence that the mean value of the population is\n",
