Remove unused import

--- a/tutorials/Weighting Results.ipynb
+++ b/tutorials/Weighting Results.ipynb
@@ -461,9 +461,9 @@
        "    units:      degrees_north\n",
        "    valid_min:  -90.0\n",
        "    valid_max:  90.0\n",
-       "    axis:       Y</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'lat'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>lat</span>: 1536</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-69c82c32-e966-4410-810d-b3c6ab20e678' class='xr-array-in' type='checkbox' checked><label for='section-69c82c32-e966-4410-810d-b3c6ab20e678' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.001023 0.003068 0.005113 0.007159 ... 0.005113 0.003068 0.001023</span></div><div class='xr-array-data'><pre>array([0.00102266, 0.00306796, 0.00511325, ..., 0.00511325, 0.00306796,\n",
-       "       0.00102266])</pre></div></div></li><li class='xr-section-item'><input id='section-13f76b37-fd17-4e45-80ed-64bc53926e27' class='xr-section-summary-in' type='checkbox'  checked><label for='section-13f76b37-fd17-4e45-80ed-64bc53926e27' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>lat</span></div><div class='xr-var-dims'>(lat)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>89.94 89.82 89.71 ... -89.82 -89.94</div><input id='attrs-d7ed05b5-78e4-421c-9122-685e09b1b569' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-d7ed05b5-78e4-421c-9122-685e09b1b569' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-926ab997-57ca-42e5-ba21-009523ad7314' class='xr-var-data-in' type='checkbox'><label for='data-926ab997-57ca-42e5-ba21-009523ad7314' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>latitudes</dd><dt><span>type :</span></dt><dd>uniform</dd><dt><span>units :</span></dt><dd>degrees_north</dd><dt><span>valid_min :</span></dt><dd>-90.0</dd><dt><span>valid_max :</span></dt><dd>90.0</dd><dt><span>axis :</span></dt><dd>Y</dd></dl></div><div class='xr-var-data'><pre>array([ 89.941406,  89.824219,  89.707031, ..., -89.707031, -89.824219,\n",
-       "       -89.941406])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-d60f25fa-7130-4bfb-b7c0-638b3a593c9d' class='xr-section-summary-in' type='checkbox'  ><label for='section-d60f25fa-7130-4bfb-b7c0-638b3a593c9d' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>lat</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-608a6257-cdf1-4b79-b24e-814475685830' class='xr-index-data-in' type='checkbox'/><label for='index-608a6257-cdf1-4b79-b24e-814475685830' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([         89.941406,  89.82421850032573,  89.70703100065145,\n",
+       "    axis:       Y</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'lat'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>lat</span>: 1536</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-82f13414-bf8f-4291-beb4-172f6dd7fbe0' class='xr-array-in' type='checkbox' checked><label for='section-82f13414-bf8f-4291-beb4-172f6dd7fbe0' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.001023 0.003068 0.005113 0.007159 ... 0.005113 0.003068 0.001023</span></div><div class='xr-array-data'><pre>array([0.00102266, 0.00306796, 0.00511325, ..., 0.00511325, 0.00306796,\n",
+       "       0.00102266])</pre></div></div></li><li class='xr-section-item'><input id='section-9899761f-d1ba-4508-b61e-bc3c50dd2ad2' class='xr-section-summary-in' type='checkbox'  checked><label for='section-9899761f-d1ba-4508-b61e-bc3c50dd2ad2' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>lat</span></div><div class='xr-var-dims'>(lat)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>89.94 89.82 89.71 ... -89.82 -89.94</div><input id='attrs-9743457a-05da-438e-9fda-f7ffab9b05bb' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-9743457a-05da-438e-9fda-f7ffab9b05bb' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f4f3d093-7dc7-43e4-a608-d17b365c98c7' class='xr-var-data-in' type='checkbox'><label for='data-f4f3d093-7dc7-43e4-a608-d17b365c98c7' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>latitudes</dd><dt><span>type :</span></dt><dd>uniform</dd><dt><span>units :</span></dt><dd>degrees_north</dd><dt><span>valid_min :</span></dt><dd>-90.0</dd><dt><span>valid_max :</span></dt><dd>90.0</dd><dt><span>axis :</span></dt><dd>Y</dd></dl></div><div class='xr-var-data'><pre>array([ 89.941406,  89.824219,  89.707031, ..., -89.707031, -89.824219,\n",
+       "       -89.941406])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-d946117e-dace-49a4-b2f3-a8f49426baf0' class='xr-section-summary-in' type='checkbox'  ><label for='section-d946117e-dace-49a4-b2f3-a8f49426baf0' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>lat</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-02a8788f-4b12-4f2b-9aa1-1936be247c75' class='xr-index-data-in' type='checkbox'/><label for='index-02a8788f-4b12-4f2b-9aa1-1936be247c75' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([         89.941406,  89.82421850032573,  89.70703100065145,\n",
        "        89.58984350097718,  89.47265600130291,  89.35546850162864,\n",
        "        89.23828100195436,  89.12109350228009,  89.00390600260582,\n",
        "        88.88671850293154,\n",
@@ -472,7 +472,7 @@
        "       -89.23828100196343, -89.35546850163769, -89.47265600131195,\n",
        "       -89.58984350098623, -89.70703100066052, -89.82421850033478,\n",
        "       -89.94140600000904],\n",
-       "      dtype=&#x27;float64&#x27;, name=&#x27;lat&#x27;, length=1536))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-5dce5c8e-777b-4df2-b99c-fe70bd395881' class='xr-section-summary-in' type='checkbox'  checked><label for='section-5dce5c8e-777b-4df2-b99c-fe70bd395881' class='xr-section-summary' >Attributes: <span>(6)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>latitudes</dd><dt><span>type :</span></dt><dd>uniform</dd><dt><span>units :</span></dt><dd>degrees_north</dd><dt><span>valid_min :</span></dt><dd>-90.0</dd><dt><span>valid_max :</span></dt><dd>90.0</dd><dt><span>axis :</span></dt><dd>Y</dd></dl></div></li></ul></div></div>"
+       "      dtype=&#x27;float64&#x27;, name=&#x27;lat&#x27;, length=1536))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-16fd4e5a-830d-4a02-b93c-1fd6009354a5' class='xr-section-summary-in' type='checkbox'  checked><label for='section-16fd4e5a-830d-4a02-b93c-1fd6009354a5' class='xr-section-summary' >Attributes: <span>(6)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>latitudes</dd><dt><span>type :</span></dt><dd>uniform</dd><dt><span>units :</span></dt><dd>degrees_north</dd><dt><span>valid_min :</span></dt><dd>-90.0</dd><dt><span>valid_max :</span></dt><dd>90.0</dd><dt><span>axis :</span></dt><dd>Y</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'lat' (lat: 1536)>\n",
@@ -531,7 +531,7 @@
     {
      "data": {
       "text/plain": [
-       "<xarray.plot.facetgrid.FacetGrid at 0x7fd1b51b2ca0>"
+       "<xarray.plot.facetgrid.FacetGrid at 0x7fd080760700>"
       ]
      },
      "execution_count": 7,
@@ -645,7 +645,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7fd1a167a700>"
+       "<matplotlib.collections.QuadMesh at 0x7fcfed7ac430>"
       ]
      },
      "execution_count": 11,
@@ -696,16 +696,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "38360540-6373-4baa-9f94-cab0535aecf9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
    "id": "e02c9d1c-8f7d-4f78-8f40-d659f1bf733f",
    "metadata": {},
    "outputs": [],
@@ -718,17 +708,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "979c0053-4fe7-4e56-8c65-c3b0baa06634",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<xarray.plot.facetgrid.FacetGrid at 0x7fd23462e820>"
+       "<xarray.plot.facetgrid.FacetGrid at 0x7fcffdb72ee0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
