Fix to citation syntax (hopefully)

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -1,4 +1,4 @@
-@article{Brady2021, 
+@article{Brady:2021, 
     doi = {10.21105/joss.02781}, 
     url = {https://doi.org/10.21105/joss.02781}, 
     year = {2021}, 
@@ -10,7 +10,7 @@
     journal = {Journal of Open Source Software} 
     } 
 
-@article{https://doi.org/10.1002/met.1732,
+@article{Griffiths:2019,
 author = {Griffiths, Deryn and Foley, Michael and Ioannou, Ioanna and Leeuwenburg, Tennessee},
 title = {Flip-Flop Index: Quantifying revision stability for fixed-event forecasts},
 journal = {Meteorological Applications},
@@ -50,7 +50,7 @@ year = {2019}
  year = {2016}
 }
 
-@article{Taggart2022,
+@article{Taggart:2022,
 author = {Taggart, Robert and Loveday, Nicholas and Griffiths, Deryn},
 title = {A scoring framework for tiered warnings and multicategorical forecasts based on fixed risk measures},
 journal = {Quarterly Journal of the Royal Meteorological Society},
