Revisions to draft paper

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -88,3 +88,68 @@
 	keywords     = {Comparing forecasts, Correlated forecast errors, Evaluation of forecasts, Non-normality},
 	abstract     = {Given two sources of forecasts of the same quantity, it is possible to compare prediction records. In particular, it can be useful to test the hypothesis of equal accuracy in forecast performance. We analyse the behaviour of two possible tests, and of modifications of these tests designed to circumvent shortcomings in the original formulations. As a result of this analysis, a recommendation for one particular testing approach is made for practical applications.}
 }
+@Article{Diebold:1995,
+	title		 = {Comparing predictive accuracy},
+	author		 = {Diebold, Francis X and Mariano, Robert S},
+	journal		 = {Journal of Business & economic statistics},
+	volume		 = {13},
+	number		 = {3},
+	pages		 = {253--263},
+	year		 = {1995},
+}
+@Article{Brown:2021,
+	title	     = {The Model Evaluation Tools (MET): More than a decade of community-supported forecast verification},
+	author       = {Brown, Barbara and Jensen, Tara and Gotway, John Halley and Bullock, Randy and Gilleland, Eric and Fowler, Tressa and Newman, Kathryn and Adriaansen, Dan and Blank, Lindsay and Burek, Tatiana and others},
+	journal      = {Bulletin of the American Meteorological Society},
+	volume       = {102},
+	number       = {4},
+	pages        = {E782--E807},
+	year         = {2021}
+}
+@inproceedings{Loveday:2023,
+	author 		 = {Loveday, Nicholas and Taggart, Robert and Templeton, Jez and Carroll, Maree and Ebert, Elizabeth and Pagano, Thomas and Cheng, George and Plastow, Kevin and Khanarmuei, Mohammadreza and Griffiths, Deryn and Richter, Harald and Leeuwenburg, Tennessee and Wickramasinghe, Daria and McKelvie, Alistair and Foley, Michael and Price, Benjamin},
+	year 		 = {2023},
+	month 		 = {01},
+	pages 		 = {},
+	title 		 = {Impact of the Jive verification system at the Australian Bureau of Meteorology},
+	organization = {AMS},
+	booktitle	 = {103rd American Meteorological Society Annual Meeting},
+	note 	     = {\url{https://ams.confex.com/ams/103ANNUAL/meetingapp.cgi/Paper/416552}},
+}
+@book{Griffiths:2017,
+	title	     = {Advice for automation of forecasts: a framework},
+	author		 = {Griffiths, Deryn and Jack, Harry and Foley, Michael and Ioannou, Ioanna and Liu, Maoyuan},
+	year		 = {2017},
+	publisher	 = {Bureau of Meteorology}
+}
+@Article{Foley:2020,
+	title	 	 = {Comparison of Single-Valued Forecasts in a User-Oriented Framework},
+	author		 = {Foley, Michael and Loveday, Nicholas},
+	journal		 = {Weather and Forecasting},
+	volume		 = {35},
+	number		 = {3},
+	pages		 = {1067--1080},
+	year		 = {2020},
+	publisher	 = {American Meteorological Society}
+}
+
+@Article{Taggart:2022a,
+	title	 	 = {Evaluation of point forecasts for extreme events using consistent scoring functions},
+	author		 = {Taggart, Robert},
+	journal		 = {Quarterly Journal of the Royal Meteorological Society},
+	volume		 = {148},
+	number		 = {742},
+	pages		 = {306--320},
+	year		 = {2022},
+	publisher	 = {Wiley Online Library}
+}
+@Article{Taggart:2022b,
+	title		 = {Point forecasting and forecast evaluation with generalized Huber loss},
+	author		 = {Taggart, Robert J},
+	journal		 = {Electronic Journal of Statistics},
+	volume		 = {16},
+	number		 = {1},
+	pages		 = {201--231},
+	year		 = {2022},
+	publisher	 = {The Institute of Mathematical Statistics and the Bernoulli Society}
+}
