--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -46,7 +46,7 @@
 	urldate      = {2023-09-06},
 	abstract     = {In the practice of point prediction, it is desirable that forecasters receive a directive in the form of a statistical functional. For example, forecasters might be asked to report the mean or a quantile of their predictive distributions. When evaluating and comparing competing forecasts, it is then critical that the scoring function used for these purposes be consistent for the functional at hand, in the sense that the expected score is minimized when following the directive. We show that any scoring function that is consistent for a quantile or an expectile functional can be represented as a mixture of elementary or extremal scoring functions that form a linearly parameterized family. Scoring functions for the mean value and probability forecasts of binary events constitute important examples. The extremal scoring functions admit appealing economic interpretations of quantiles and expectiles in the context of betting and investment problems. The Choquet-type mixture representations give rise to simple checks of whether a forecast dominates another in the sense that it is preferable under any consistent scoring function. In empirical settings it suffices to compare the average scores for only a finite number of extremal elements. Plots of the average scores with respect to the extremal scoring functions, which we call Murphy diagrams, permit detailed comparisons of the relative merits of competing forecasts.}
 }
-@article{Taggart:2022,
+@article{Taggart:2022a,
 	title        = {A scoring framework for tiered warnings and multicategorical forecasts based on fixed risk measures},
 	author       = {Taggart, Robert and Loveday, Nicholas and Griffiths, Deryn},
 	year         = 2022,
@@ -132,8 +132,7 @@
 	year		 = {2020},
 	publisher	 = {American Meteorological Society}
 }
-
-@Article{Taggart:2022a,
+@Article{Taggart:2022b,
 	title	 	 = {Evaluation of point forecasts for extreme events using consistent scoring functions},
 	author		 = {Taggart, Robert},
 	journal		 = {Quarterly Journal of the Royal Meteorological Society},
@@ -143,7 +142,7 @@
 	year		 = {2022},
 	publisher	 = {Wiley Online Library}
 }
-@Article{Taggart:2022b,
+@Article{Taggart:2022c,
 	title		 = {Point forecasting and forecast evaluation with generalized Huber loss},
 	author		 = {Taggart, Robert J},
 	journal		 = {Electronic Journal of Statistics},
