--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -152,3 +152,13 @@
 	year		 = {2022},
 	publisher	 = {The Institute of Mathematical Statistics and the Bernoulli Society}
 }
+@Article{Gneiting:2011,
+	title		 = {Comparing density forecasts using threshold-and quantile-weighted scoring rules},
+	author		 = {Gneiting, Tilmann and Ranjan, Roopesh},
+	journal		 = {Journal of Business & Economic Statistics},
+	volume		 = {29},
+	number		 = {3},
+	pages		 = {411--422},
+	year		 = {2011},
+	publisher	 = {Taylor & Francis}
+}
