Added Taggart 2022d citations

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -162,3 +162,10 @@
 	year		 = {2011},
 	publisher	 = {Taylor & Francis}
 }
+@misc{Taggart:2022d,   
+    title    	 = {Assessing calibration when predictive distributions have discontinuities.},   
+    url 		 = {www.bom.gov.au/research/publications/researchreports/BRR-064.pdf},   
+    author 		 = {Taggart, Robert},   
+    year 		 = {2022},   
+    note 		 = {Accessed on September 9, 2023} 
+}
