Address minor quirks of md to PDF conversion for the paper

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -144,7 +144,7 @@
 }
 @Article{Taggart:2022c,
 	title		 = {Point forecasting and forecast evaluation with generalized Huber loss},
-	author		 = {Taggart, Robert J},
+	author		 = {Taggart, Robert},
 	journal		 = {Electronic Journal of Statistics},
 	volume		 = {16},
 	number		 = {1},
@@ -164,7 +164,7 @@
 }
 @misc{Taggart:2022d,   
     title    	 = {Assessing calibration when predictive distributions have discontinuities.},   
-    url 		 = {www.bom.gov.au/research/publications/researchreports/BRR-064.pdf},   
+    url 		 = {http://www.bom.gov.au/research/publications/researchreports/BRR-064.pdf},   
     author 		 = {Taggart, Robert},   
     year 		 = {2022},   
     note 		 = {Accessed on September 9, 2023} 
