--- a/tutorials/Isotonic Regression.ipynb
+++ b/tutorials/Isotonic Regression.ipynb
@@ -6,14 +6,14 @@
    "source": [
     "# Isotonic Regression\n",
     "\n",
-    "Isotonic regression is a technique of modelling the relationship between two variables while imposing a specific monotonicity constraint known as isotonicity. This constraint ensures that the relationship between the variables will be either non-decreasing or non-increasing. In simpler terms, isotonic regression seeks to find a piecewise constant function that is either non-decreasing or non-increasing, providing the best fits to the given data points while adhering to the monotonicity constraint. The following plot shows an example of isotonic regression (solid red line) compared to linear regression (dashed green line) on the same data (this image is from https://en.wikipedia.org/wiki/Isotonic_regression)."
+    "First, let's explain the concept of isotonic regression. Isotonic regression is a powerful technique of modelling the relationship between two variables while imposing a specific monotonicity constraint known as isotonicity. This constraint ensures that the relationship between the variables will be either non-decreasing or non-increasing. In simpler terms, isotonic regression seeks to find a piecewise constant function that is either non-decreasing or non-increasing, providing the best fits to the given data points while adhering to the monotonicity constraint. The following plot shows an example of isotonic regression (solid red line) compared to linear regression (dashed green line) on the same data (this image is from https://en.wikipedia.org/wiki/Isotonic_regression)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![isotonic](isotonic_regression.png)"
+    "![isotonic](images/isotonic_regression.png)"
    ]
   },
   {
@@ -1768,15 +1768,8 @@
     "\n",
     "The reliability diagram shows what would be an optimally re-calibrated forecast value for each forecasted value. As it was mentioned, the re-calibrated curve is derived using isotonic regression that minimises the error score across the set of forecasts based on assumption of isotonicity (i.e., the re-calibrated forecast values cannot decrease as forecasted values increase). In this diagram, x-axis demonstrates the forecast values (here, our synthetic temperature forecasts), and y-axis shows the re-calibrated (regression) values. In reliability diagram, the diagonal line (here displayed by a black dashed line) shows an ideal (well-calibrated) forecast. If a point is above the ideal line, it indicates under-prediction, whereas point below the ideal line indicates over-prediction. Here we also displayed the 95% confidence bands estimated by 100 bootstrapping samples. The confidence bands indicate uncertainty of the re-calibrated values due to sampling uncertainty, and they are particularly important in the case of comparing multiple forecast systems. Moreover, producing the forecast counts `fcst_counts` as an item in the return dictionary of the `isotonic_fit` function allows to create the forecast histogram. Displaying both reliability diagram and forecast histogram in one plot is a common practice in weather forecasting that provides a better insight into the calibration of the forecasts.\n",
     "\n",
-    "Please note that in this example, we use isotonic regression for a **single-value mean forecast**, but it can also be used for **probabilistic forecasts**. In the case of single-value mean forecast, as can be seen in this example, users can set `functional='mean'`, and for quantile forecast, the `functional` can be set to `'mean'`. The `functional` argument determines that what is the functional that the forecast is targeting. Therefore, it can be used to find an optimal regression fit in each block, subject to a non-decreasing monotonicity constraint, using the pool adjacent violators (PAV) algorithm."
+    "Please note that in this example, we use isotonic regression for a **single-value mean forecast**, but it can also be used for **probabilistic forecasts**. In the case of single-value mean forecast, as can be seen in this example, users can set `functional='mean'`, and for quantile forecast, the `functional` can be set to `'mean'`. For a probabilistic forecast of a binary event (e.g., probability of at least 5 mm precipitation falling over a 24 hour period), where the forecasts take values on the range [0, 1] and binary observations take values from the set {0,1}, user can specify the `functional` argument as `'mean'` to calculate the isotonic regression. The `functional` argument determines that what is the functional that the forecast is targeting. Therefore, it can be used to find an optimal regression fit in each block, subject to a non-decreasing monotonicity constraint, using the pool adjacent violators (PAV) algorithm."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1795,7 +1788,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
