--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -169,3 +169,41 @@
     year 		 = {2022},   
     note 		 = {Accessed on September 9, 2023} 
 }
+@misc{loveday2023userfocused,
+      title={A User-Focused Approach to Evaluating Probabilistic and Categorical Forecasts}, 
+      author={Nicholas Loveday and Robert Taggart and Mohammadreza Khanarmuei},
+      year={2023},
+      eprint={2311.18258},
+      archivePrefix={arXiv},
+      primaryClass={stat.AP}
+}
+@article{nipen2023verif,
+  title={Verif: A weather-prediction verification tool for effective product development},
+  author={Nipen, Thomas N and Stull, Roland B and Lussana, Cristian and Seierstad, Ivar A},
+  journal={Bulletin of the American Meteorological Society},
+  volume={104},
+  number={9},
+  pages={E1610--E1618},
+  year={2023},
+  publisher={American Meteorological Society}
+}
+@article{dimitriadis2021stable,
+  title={Stable reliability diagrams for probabilistic classifiers},
+  author={Dimitriadis, Timo and Gneiting, Tilmann and Jordan, Alexander I},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={118},
+  number={8},
+  pages={e2016191118},
+  year={2021},
+  publisher={National Acad Sciences}
+}
+@article{griffiths2021circular,
+  title={Circular Flip-Flop Index: quantifying revision stability of forecasts of direction},
+  author={Griffiths, Deryn and Loveday, Nicholas and Price, Benjamin and Foley, Michael and McKelvie, Alistair},
+  journal={Journal of Southern Hemisphere Earth Systems Science},
+  volume={71},
+  number={3},
+  pages={266--271},
+  year={2021},
+  publisher={CSIRO Publishing}
+}
