--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -88,6 +88,16 @@
 	keywords     = {Comparing forecasts, Correlated forecast errors, Evaluation of forecasts, Non-normality},
 	abstract     = {Given two sources of forecasts of the same quantity, it is possible to compare prediction records. In particular, it can be useful to test the hypothesis of equal accuracy in forecast performance. We analyse the behaviour of two possible tests, and of modifications of these tests designed to circumvent shortcomings in the original formulations. As a result of this analysis, a recommendation for one particular testing approach is made for practical applications.}
 }
+@article{Hoyer:2017,
+  title         = {xarray: N-D labeled Arrays and Datasets in Python},
+  author        = {Hoyer, S. and Hamman, J.},
+  year          = 2017,
+  journal       = {Journal of Open Research Software},
+  volume        = 5,
+  number        = 1,
+  doi           = {https://doi.org/10.5334/jors.148},
+  keywords      = {Python, pandas, netCDF, multidimensional data, data handling, data analysis}
+}
 @Article{Diebold:1995,
 	title		 = {Comparing predictive accuracy},
 	author		 = {Diebold, Francis X and Mariano, Robert S},
