Modified paper.bib entry for xskillscore to match the xskillscore citation file

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -25,12 +25,13 @@
 	abstract     = {The degree to which a forecast changes from one issue time to the next is an interesting aspect of a forecast system. Weather forecasters report that they are reluctant to change a forecast if they judge there is a risk of it being changed back again. They believe such instability detracts from the message being delivered and are reluctant to use automated guidance which they perceive as having lack of stability. A Flip-Flop Index was developed to quantify this characteristic of revisions of fixed-event forecasts. The index retains physically meaningful units, has a simple definition and does not penalize a sequence of forecasts that show a trend, which is important when assessing forecasts where a trend can be interpreted as a forecast becoming more confident with a shorter lead time. The Flip-Flop Index was used to compare the stability of sequences of automated guidance with the official Australian Bureau of Meteorology forecasts, which are prepared manually. The results show that the forecasts for chance of rain from the automated guidance are often more stable than the official, manual forecasts. However, the official forecasts for maximum temperature are more stable than those based on automated guidance. The Flip-Flop Index is independent of observations and does not measure skill, but it can play a complementary role in characterizing and evaluating a forecasting system.}
 }
 @misc{xskillscore,
-	title        = {xskillscore: Metrics for verifying forecasts},
-	author       = {Aaron Spring, Andrew Huang, Dougie Squire, mcsitter, Ray Bell, Riley X. Brady and Zachary Blackwood.},
+	title        = {xarray-contrib/xskillscore: Metrics for verifying forecasts},
+	author       = {Ray Bell, Aaron Spring, Riley Brady, Andrew Huang, Dougie Squire, Zachary Blackwood, Maximillian Cosmo Sitter and Taher Chegini.},
+	month        = aug,
 	year         = 2021,
-	journal      = {GitHub repository},
-	publisher    = {GitHub},
-	url          = {https://github.com/xarray-contrib/xskillscore}
+	publisher    = {Zenodo},
+	url          = {https://github.com/xarray-contrib/xskillscore},
+	doi          = {http://doi.org/10.5281/zenodo.5173153}
 }
 @article{Ehm:2016,
 	title        = {Of quantiles and expectiles: consistent scoring functions, Choquet representations and forecast rankings},
