Further adjustment to the .bib file

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -26,12 +26,12 @@
 }
 @misc{xskillscore,
 	title        = {xarray-contrib/xskillscore: Metrics for verifying forecasts},
-	author       = {Ray Bell, Aaron Spring, Riley Brady, Andrew Huang, Dougie Squire, Zachary Blackwood, Maximillian Cosmo Sitter and Taher Chegini.},
+	author       = {Ray Bell and Aaron Spring and Riley Brady and Andrew Huang and Dougie Squire and Zachary Blackwood and Maximillian Cosmo Sitter and Taher Chegini.},
 	month        = aug,
 	year         = 2021,
 	publisher    = {Zenodo},
-	url          = {https://github.com/xarray-contrib/xskillscore},
-	doi          = {http://doi.org/10.5281/zenodo.5173153}
+	doi          = {http://doi.org/10.5281/zenodo.5173153},	
+	url          = {https://github.com/xarray-contrib/xskillscore}
 }
 @article{Ehm:2016,
 	title        = {Of quantiles and expectiles: consistent scoring functions, Choquet representations and forecast rankings},
