Modify bib file with incorrect rendering of doi link

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -30,7 +30,7 @@
 	month        = aug,
 	year         = 2021,
 	publisher    = {Zenodo},
-	doi          = {http://doi.org/10.5281/zenodo.5173153},	
+	doi          = {10.5281/zenodo.5173153},	
 	url          = {https://github.com/xarray-contrib/xskillscore}
 }
 @article{Ehm:2016,
