Remove URL prefix from DOI data in bib file

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -18,7 +18,7 @@
 	volume       = 26,
 	number       = 1,
 	pages        = {30--35},
-	doi          = {https://doi.org/10.1002/met.1732},
+	doi          = {10.1002/met.1732},
 	url          = {https://rmets.onlinelibrary.wiley.com/doi/abs/10.1002/met.1732},
 	keywords     = {Flip-Flop Index, forecast convergence, forecast oscillations, forecast stability, forecast volatility},
 	eprint       = {https://rmets.onlinelibrary.wiley.com/doi/pdf/10.1002/met.1732},
@@ -55,7 +55,7 @@
 	volume       = 148,
 	number       = 744,
 	pages        = {1389--1406},
-	doi          = {https://doi.org/10.1002/qj.4266},
+	doi          = {10.1002/qj.4266},
 	url          = {https://rmets.onlinelibrary.wiley.com/doi/abs/10.1002/qj.4266},
 	keywords     = {categorical forecasts, consistent scoring function, decision theory, forecast ranking, forecast verification, risk, warnings},
 	eprint       = {https://rmets.onlinelibrary.wiley.com/doi/pdf/10.1002/qj.4266},
@@ -83,7 +83,7 @@
 	volume       = 13,
 	number       = 2,
 	pages        = {281--291},
-	doi          = {https://doi.org/10.1016/S0169-2070(96)00719-4},
+	doi          = {10.1016/S0169-2070(96)00719-4},
 	issn         = {0169-2070},
 	url          = {https://www.sciencedirect.com/science/article/pii/S0169207096007194},
 	keywords     = {Comparing forecasts, Correlated forecast errors, Evaluation of forecasts, Non-normality},
@@ -96,7 +96,7 @@
   journal       = {Journal of Open Research Software},
   volume        = 5,
   number        = 1,
-  doi           = {https://doi.org/10.5334/jors.148},
+  doi           = {10.5334/jors.148},
   keywords      = {Python, pandas, netCDF, multidimensional data, data handling, data analysis}
 }
 @Article{Diebold:1995,
