Renamed notebook Updated markdown

--- a/tutorials/Flip_Flop_Index.ipynb
+++ b/tutorials/Flip_Flop_Index.ipynb
@@ -25,48 +25,45 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0308243d-eaa3-46cc-b833-6c9094fafc5c",
+   "id": "916cf8d0-4164-4e38-8f15-b808e3157d95",
    "metadata": {},
    "source": [
     "The Flip-Flop Index is a way of quantifying the stability of a forecast without penalising a trend. A trend will be be expected from a climatological forecast at longer lead-times to a more accurate, and possibly extreme, forecast at shorter lead times. The Flip-Flop Index has the same units as the forecast, with smaller values indicating greater stability. The Flip-Flop Index cannot be used to verify a forecast. Indeed, it does not use the verifying observation in its calculation. However, it describes an (arguably important) characteristic of a sequence of forecasts for an event. \n",
     "\n",
     "Read about the index at:  \n",
     "Griffiths et al. (2019) \"Flip-Flop Index: Quantifying Revision Stability for Fixed-Event Forecasts\", Meteorological Applications, 26(1), pp. 30-35.  \n",
-    "https://doi.org/10.1002/met.1732\n",
+    "[https://doi.org/10.1002/met.1732](https://doi.org/10.1002/met.1732)\n",
     "\n",
     "And at:  \n",
-    "Griffiths D et al. (2021) \"Circular Flip-Flop Index: quantifying revision stability of \n",
-    "forecasts of direction, \r\n",
-    "Journal of Southern Hemisphere Eart \r\n",
-    "Systems Science \r\n",
-    "71(pp. 3), 266–  \n",
-    "https://doi.org/10.1071/ES21010\n",
+    "Griffiths D et al. (2021) \"Circular Flip-Flop Index: quantifying revision stability of  forecasts of direction\", \n",
+    "Journal of Southern Hemisphere Earth Systems Science 71(pp. 3), 266–271\n",
+    "[https://doi.org/10.1071/ES21010](https://doi.org/10.1071/ES21010)\n",
     "\n",
-    "The two functions showcased here are t`he flip_flop_in`dex which calculates the index for individual forecast revision series, and t`he flip_flop_index_proportion_exceed`ing which can be used to summarise the Flip-Flop Index values over many forecast revision series by reporting the frequency with which the Flip-Flop Index was observed to exceed values of intere010"
+    "The two functions showcased here are `flip_flop_index` which calculates the index for individual forecast revision series, and `flip_flop_index_proportion_exceding` which can be used to summarise the Flip-Flop Index values over many forecast revision series by reporting the frequency with which the Flip-Flop Index was observed to exceed values of interest."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "41766974-8695-4361-9eb5-c52d82109713",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "help(flip_flop_index)"
+    "# help(flip_flop_index)  # Uncomment this to see the help message"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d8bea123-8e4e-4006-b9f6-7df5e27f4b74",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "help(flip_flop_index_proportion_exceeding)"
+    "# help(flip_flop_index_proportion_exceeding)  # Uncomment this to see the help message"
    ]
   },
   {
