Added a semi-colon to a markdown cell

--- a/tutorials/Mean_Squared_Error.ipynb
+++ b/tutorials/Mean_Squared_Error.ipynb
@@ -38,7 +38,7 @@
    "id": "d25b9cda-f628-42f8-acce-1523d6df345c",
    "metadata": {},
    "source": [
-    "# Use MSE to Focus on Large Anomalies. Don't Sweat the Small Stuff\n",
+    "# Use MSE to Focus on Large Anomalies; Don't Sweat the Small Stuff\n",
     "MSE is sensitive to large errors.\n",
     "\n",
     "MSE is a fair measure of error if you are forecasting the mean value. Minimising the MSE can be used as a training or objective function for machine learning to obtain a forecast that is the mean of a full probabilistic forecast.\n",
