--- a/tutorials/Root_Mean_Squared_Error.ipynb
+++ b/tutorials/Root_Mean_Squared_Error.ipynb
@@ -117,7 +117,7 @@
     {
      "data": {
       "text/plain": [
-       "<xarray.plot.facetgrid.FacetGrid at 0x7fba3e2dae50>"
+       "<xarray.plot.facetgrid.FacetGrid at 0x7f729e4d2d50>"
       ]
      },
      "execution_count": 6,
@@ -216,7 +216,7 @@
     {
      "data": {
       "text/plain": [
-       "<xarray.plot.facetgrid.FacetGrid at 0x7fba9c705650>"
+       "<xarray.plot.facetgrid.FacetGrid at 0x7f729e022750>"
       ]
      },
      "execution_count": 10,
@@ -237,7 +237,6 @@
    "source": [
     "# Figure 2 - MAE and RMSE as a function of latitude\n",
     "mae_by_latitude = mae(forecast_of_interest, analysis.temp_scrn, reduce_dims='lon')\n",
-    "mse_by_latitude = mse(forecast_of_interest, analysis.temp_scrn, reduce_dims='lon')\n",
     "rmse_by_latitude = rmse(forecast_of_interest, analysis.temp_scrn, reduce_dims='lon')\n",
     "\n",
     "# Prepare some labelling for the plot\n",
