Improved citation syntax somewhat with newlines and italics to demarcate things

--- a/tutorials/Flip_Flop_Index.ipynb
+++ b/tutorials/Flip_Flop_Index.ipynb
@@ -31,12 +31,12 @@
     "The Flip-Flop Index is a way of quantifying the stability of a forecast without penalising a trend. A trend will be be expected from a climatological forecast at longer lead-times to a more accurate, and possibly extreme, forecast at shorter lead times. The Flip-Flop Index has the same units as the forecast, with smaller values indicating greater stability. The Flip-Flop Index cannot be used to verify a forecast. Indeed, it does not use the verifying observation in its calculation. However, it describes an (arguably important) characteristic of a sequence of forecasts for an event. \n",
     "\n",
     "Read about the index at:  \n",
-    "Griffiths et al. (2019) \"Flip-Flop Index: Quantifying Revision Stability for Fixed-Event Forecasts\", Meteorological Applications, 26(1), pp. 30-35.  \n",
-    "[https://doi.org/10.1002/met.1732](https://doi.org/10.1002/met.1732)\n",
+    "Griffiths et al. (2019) \"Flip-Flop Index: Quantifying Revision Stability for Fixed-Event Forecasts\",  \n",
+    "*Meteorological Applications, 26(1), pp. 30-35.* [https://doi.org/10.1002/met.1732](https://doi.org/10.1002/met.1732)\n",
     "\n",
     "And at:  \n",
-    "Griffiths D et al. (2021) \"Circular Flip-Flop Index: quantifying revision stability of  forecasts of direction\", \n",
-    "Journal of Southern Hemisphere Earth Systems Science 71(pp. 3), 266–271\n",
+    "Griffiths D et al. (2021) \"Circular Flip-Flop Index: quantifying revision stability of  forecasts of direction\",  \n",
+    "*Journal of Southern Hemisphere Earth Systems Science 71(pp. 3), 266–271*  \n",
     "[https://doi.org/10.1071/ES21010](https://doi.org/10.1071/ES21010)\n",
     "\n",
     "The two functions showcased here are `flip_flop_index` which calculates the index for individual forecast revision series, and `flip_flop_index_proportion_exceding` which can be used to summarise the Flip-Flop Index values over many forecast revision series by reporting the frequency with which the Flip-Flop Index was observed to exceed values of interest."
@@ -2329,7 +2329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af7a8dde-bf62-4751-8624-4cfcdf8b729b",
+   "id": "34d3fd9d-4f7c-4f73-a932-d1d158fb0404",
    "metadata": {},
    "source": [
     "Next Steps:\n",
