--- a/tutorials/README.ipynb
+++ b/tutorials/README.ipynb
@@ -25,16 +25,9 @@
     "- [Murphy Diagrams](./Murphy_Diagrams.ipynb)\n",
     "- [Pearson's Correlation](./Pearsons_Correlation.ipynb)\n",
     "- [Quantile Loss](./Quantile_Loss.ipynb)\n",
-    "- [R(./Quantile_Loss.ipynb)"
+    "- [Reciever Operating Characteristic](./ROC.ipynb)\n",
+    "- [Weighting Results](./Weighting_Results.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a93ddd1-da76-432a-9684-f26812c92f0e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
